Package: aroma.core
===================

Version: 2.0.4 [2011-03-03]
o Added static loadAll() for SampleAnnotationSet.
o GENERALIZATION: In addition to search <rootPath>/<set>/<name> paths,
  findAnnotationData() can also search <rootPath>/<set>/ by not 
  specifying argument 'name' (or setting it to NULL).
o ROBUSTNESS: Added a return contract/sanity check asserting that
  getUnitsOnChromosomes() for AromaUnitChromosomeTabularBinaryFile
  truly returns valid 'unit' indices.  Thanks to Emilie Sohier, 
  France for reporting on a problem related to this.


Version: 2.0.3 [2011-03-02]
o GENERALIZATION: Now the default for createImage() for matrix is to 
  test to create images according to aroma settings option
  'output/ImageClasses'.
o GENERALIZATION: getAverageFile() for AromaUnitTotalCnBinarySet first
  searches for an existing result file according to the new search
  conventions.  If not found, then it's created.
o STANDARDIZATION: Now the default output path for all 
  allocateFromUnitAnnotationDataFile() is
  annotationData/chipTypes/<chipType>/.  Before it was the same
  directory as the original annotation data file, which may for
  instance have been in a deeper subdirectory, or recently also
  in a sibling root path.
o ROBUSTNESS: Now getAverageFile() for AromaUnitTotalCnBinarySet creates
  the result file atomically by writing to a temporary file which is
  renamed afterward.
o Now write() and read() for RasterImage throws an informative error
  message explaining that the 'png' package is needed.
o BUG FIX: colorize() for Image would throw '<simpleError in ...: could
  not find function "colorMode">', because the colorMode() function
  needs to be explicitly imported after the recent package cleanups.
o BUG FIX: colorize() for Image try to call createImage() using a
  vector instead of a matrix.
o BUG FIX: createImage() for matrix would not result the first possible
  image created (when testing different image classes) but instead